Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66262

Wrong positon of suggested file name counter in QWebEngineDownloadItem.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.12.2
    • 5.10.0, 5.9.4
    • WebEngine
    • None
    • Linux Mint
    • Ice548ba2824bd43cf7ad00509b598853087274af

      I used the webengine to download a file called "Test (1. Kopie).txt".
      The QWebEngineDownloadItem return for path() "/path/Test (1. Kopie).txt".
      I didn't delete the file.

      After some some hours i downloaded the same file again.
      The QWebEngineDownloadItem return for path() "/path/Test (1(1). Kopie).txt".

      In my opinion the object should return for path() "/path/Test (1. Kopie)(1).txt".
      This is also the path like chromium would return.

      I didn't find any other bug about this.

      You can find the filename calculations in https://github.com/qt/qtwebengine/blob/f0c5f3306fadc7dea7a13defd8b9cf20a6982493/src/core/download_manager_delegate_qt.cpp#L161

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ztamas Tamas Zakor
            jurkov jurkov
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes