Add API to set default download path

Add functions and property to set the default download
location in QWebEngineProfile and QQuickWebEngineProfile.

Also add new test for check uniquifying download filename.

Update plugins.qmltypes to 1.9

[ChangeLog][Profile][QtWebEngine][QtWebEngineWidgets]
Add functions and property to set the default download
location in QWebEngineProfile and QQuickWebEngineProfile.

Task-number: QTBUG-66262
Task-number: QTBUG-72176
Change-Id: I7fa93b66c326766b176aec24d453dd75602b91de
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>